# Robotics_Project1

./: automated_bash.bh
odom/: CMakeLists.txt  given_odom.txt  package.xml
odom/launch/: launcher.launch
odom/msg/: WheelSpeed.msg
odom/src/: euler_integrator.cpp  integrator_copy.cpp  max_delta.cpp  t.cpp  wheels.cpp
robotics_hw1/: CMakeLists.txt  package.xml
robotics_hw1/cfg/: parameters.cfg
robotics_hw1/launch/: launcher.launch
robotics_hw1/msg/: CustomOdom.msg
robotics_hw1/src/: integrator.cpp  service_client.cpp  set_pose.cpp  set_zero_pose.cpp  wheels.cpp
robotics_hw1/srv/: SetPose.srv
